styles.css
body {
  margin-top: 50px;
}

.main {
  /* background-image: url('hero.jpeg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover; */
  width: 100%;
  height: 100%;
  padding: 0;
  margin: 0;
}

.domain-container {
  padding: 5px 10px;
}

.domain-container h3 {
  margin-top: 0;
  margin-bottom: 0;
}

.heading {
  text-align: center;
  margin: 0 auto;
}

.matchingDomains {
  width: 100% !important;
}



.domains-container, .search-container {
  max-width: 1000px;
  margin: 0 auto;
}

.search-container {
  display: flex;
  text-align: center;
}

.search-bar {
  width: 100%;
  text-align: left;
  padding: 6px 12px;
  border-radius: 8px;
  border: grey solid 1px;
  margin-top: 20px;
}

.container {
  margin-top: 40px;
}

.hidden {
  display: none;
}
.foundword {
  background-color: #811b54;
  color: white;
}
.heading-logo {
  background-image: url('logo.svg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  height: 100px;
  width: auto;
  margin: 0 auto;
}

.heading a h4 {
  color: #811b54;
}

.numberOfResults {
  width: 100%;
  padding-left: 10px;
  padding-bottom: 18px;
}

.contact-btn {
  width: 100px;
  padding: 10px;
  position: relative;
  background-color: white;
  border: #811b54 1px solid;
  color: #811b54;
  border-radius: 10px;
  text-decoration: none;
}
.domain-container .contact-btn {
  right: 30px;
  float: right;
  bottom: 30px;
}

.heading .contact-btn {
  top: 22px;
  font-size: 24px;
}

.contact-btn:hover {
  background-color: #811b54;
  color: white;
  text-decoration: none;
}


@media (max-width: 450px) {
  html {
    width: 175%;
  }
  .domains-container {
    width: 98% !important;
  }
  .domain-container h3{
    font-size: 40px;
  }
  .heading h1 {
    font-size: 75px;
  }
  .heading h3 {
    font-size: 30px;
  }
  .domain-container .contact-btn {
    bottom: 42px;
    right: 0px;
  }
  .heading .contact-btn {
    font-size: 34px;
  }
  .numberOfResults h4 {
    font-size: 30px;
    color: grey;
  }
  .long-url {
    font-size: 31px;
  }
  #searchy {
    height: 100px !important;
    font-size: 40px !important;
  }
}

